--- a/frontend/www/templates/menu.html
+++ b/frontend/www/templates/menu.html
@@ -27,6 +27,9 @@
         <ion-item menu-close href="#/app/sell">
           Sell
         </ion-item>
+        <ion-item menu-close href="#/app/selectRole">
+          Select Role
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
