Renamed all buyer pages to seller pages. Added more seller pages

--- a/frontend/www/templates/select_role.html
+++ b/frontend/www/templates/select_role.html
@@ -2,8 +2,8 @@
   <ion-content>
     <h1>I am a...</h1>
     <br>
-    <button ui-sref="app.buyerClassInfo" ion-button>Buyer</button>
+    <button ui-sref="" ion-button>Buyer</button>
     <br>
-    <button ui-sref="" ion-button>Seller</button>
+    <button ui-sref="app.sellerClassInfo" ion-button>Seller</button>
   </ion-content>
 </ion-view>
