Updated UI. Added a few buyer pages

--- a/frontend/www/templates/select_role.html
+++ b/frontend/www/templates/select_role.html
@@ -2,8 +2,8 @@
   <ion-content>
     <h1>I am a...</h1>
     <br>
-    <button ui-sref="" ion-button>Buyer</button>
+    <button class="button" ui-sref="app.buyerSelectCourse">Buyer</button>
     <br>
-    <button ui-sref="app.sellerClassInfo" ion-button>Seller</button>
+    <button class="button" ui-sref="app.sellerClassInfo">Seller</button>
   </ion-content>
 </ion-view>
