--- a/frontend/www/templates/seller_confirmation.html
+++ b/frontend/www/templates/seller_confirmation.html
@@ -8,6 +8,6 @@
     <p>Author: {{bookInfo.author}}</p>
     <p>Price: {{bookInfo.price | currency}}</p>
 
-    <button ui-sref="app.selectRole" ion-button>Home</button>
+    <button class="button" ui-sref="app.selectRole">Home</button>
   </ion-content>
 </ion-view>
