--- a/frontend/www/templates/seller_set_price.html
+++ b/frontend/www/templates/seller_set_price.html
@@ -1,12 +1,12 @@
 <ion-view view-title="Set Price">
   <ion-content>
     <ion-list>
-        <h1>I'm selling the book for</h1>
         <ion-item>
-            <ion-input placeholder="$0.00"></ion-input>
+            <label ion-label>I'm selling the book for</label>
+            <input ion-input type="number" placeholder="$0.00"></input>
         </ion-item>
     </ion-list>
 
-    <button ui-sref="app.sellerConfirmation" ion-button>Next</button>
+    <button class="button" ui-sref="app.sellerConfirmation">Next</button>
   </ion-content>
 </ion-view>
