--- a/frontend/www/templates/seller_class_info.html
+++ b/frontend/www/templates/seller_class_info.html
@@ -14,6 +14,6 @@
             <input ion-input type="text" placeholder="Fall 2016"></input>
         </ion-item>
     </ion-list>
-    <button ui-sref="app.sellerSuggestedBooks" ion-button>Next</button>
+    <button class="button" ui-sref="app.sellerSuggestedBooks">Next</button>
   </ion-content>
 </ion-view>
