--- a/www/templates/buyer_book_list.html
+++ b/www/templates/buyer_book_list.html
@@ -5,7 +5,7 @@
         <ion-item ng-repeat="seller in sellers">
             <p>Seller: {{seller.name}}</p>
             <p>Price: {{seller.price | currency}}</p>
-            <button ui-sref="">Request Book</button>
+            <button class="button" ui-sref="">Request Book</button>
         </ion-item>
     </ion-list>
   </ion-content>
