Modified hardcoded listings

--- a/www/templates/buyer_book_list.html
+++ b/www/templates/buyer_book_list.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Book Listings">
   <ion-content>
-    <h1>Listings for the <i>The 3G IP Multimedia Subsystem (IMS): Merging the Internet and the Cellular Worlds</i></h1>
+    <h1>Listings for Mobile Services Textbook</h1>
     <ion-list>
         <ion-item ng-repeat="seller in sellers">
             <p>Seller: {{seller.name}}</p>
