--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <ion-menu [content]="content">
 
-  <ion-header>
+  <ion-header color="primary">
     <ion-toolbar>
       <ion-title>Pages</ion-title>
     </ion-toolbar>
