--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,8 +10,10 @@
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-$text-color:        #000;
+$text-color:        #4a5350;
 $background-color:  #fff;
+$card-md-text-color: #4a5350;
+$card-md-title-text-color: #4a5350;
 
 
 // Named Color Variables
@@ -23,7 +25,7 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
+  primary:    #02da87,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
