--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 
   <ion-header color="primary">
     <ion-toolbar>
-      <ion-title>Pages</ion-title>
+      <ion-title>Home</ion-title>
     </ion-toolbar>
   </ion-header>
 
