--- a/src/pages/select-role/select-role.scss
+++ b/src/pages/select-role/select-role.scss
@@ -1,9 +1,25 @@
-.hello-ionic-page {
+.select-role-page {
 
   p {
     margin: 20px 0;
     line-height: 22px;
     font-size: 16px;
+  }
+
+  ion-card {
+    position: relative;
+    text-align: center;
+    width: auto;
+    max-height: 44%;
+  }
+
+  .card-title {
+    position: absolute;
+    top: 36%;
+    font-size: 2.0em;
+    width: 100%;
+    font-weight: bold;
+    color: #fff;
   }
 
 }
