--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,10 +10,12 @@
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-$text-color:        #4a5350;
-$background-color:  #fff;
-$card-md-text-color: #4a5350;
-$card-md-title-text-color: #4a5350;
+$text-color:        #fff;
+$background-color:  #A2D4AB;
+$card-md-text-color: #fff;
+$card-md-header-color: #428472;
+$card-md-background-color: #a2d4c6;
+$button-md-text-color: #F48B94;
 
 
 // Named Color Variables
@@ -25,8 +27,8 @@ $card-md-title-text-color: #4a5350;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #02da87,
-  secondary:  #32db64,
+  primary:    #87ba90,
+  secondary:  #428472,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
